--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
 				<meta name="apple-mobile-web-app-status-bar" content="#5b0e5c">
 				<meta name="apple-mobile-web-app-status-bar-style" content="#5b0e5c">
 				<meta name="apple-mobile-web-app-title" content="Contatei Açaí">
-				
+				<script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  data-utmify-prevent-subids
+  async
+  defer
+></script>
 							<base >
 		</head>
 
