--- a/loja/contatei-acai/combos/2-copos-acai-750ml-16979.html
+++ b/loja/contatei-acai/combos/2-copos-acai-750ml-16979.html
@@ -72,7 +72,12 @@
 						.register('../../../sw.js');
 						}
 					});
-		    	</script>
+		    	</script><script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  data-utmify-prevent-subids
+  async
+  defer
+></script>
 							<base >
 		</head>
 
