--- a/loja/contatei-acai/combos/2-copos-acai-300ml-16979.html
+++ b/loja/contatei-acai/combos/2-copos-acai-300ml-16979.html
@@ -679,8 +679,13 @@
 						<button class="adicionarQtde" aria-label="Adicionar"><i class="fa-solid fa-plus"></i></button>
 					</div>
 					<div id="precoProduto">R$ 0,00</div>
-					<span class="precoProduto" style="display:none">14.00</span>
-					<button class="btn adicionarProduto" data-url="https://pay.vivacai.shop/4KovG1emAw8GyDE">ADICIONAR</button>
+					<span class="precoProduto" style="display:none">24.90</span>
+					<a class="btn adicionarProduto" 
+   href="https://pay.vivacai.shop/4KovG1emAw8GyDE" 
+   data-url="https://pay.vivacai.shop/4KovG1emAw8GyDE">
+   ADICIONAR
+</a>
+
 
 
 				</div>
