--- a/loja/contatei-acai/combos/2-copos-acai-300ml-16979.html
+++ b/loja/contatei-acai/combos/2-copos-acai-300ml-16979.html
@@ -680,7 +680,12 @@
 					</div>
 					<div id="precoProduto">R$ 0,00</div>
 					<span class="precoProduto" style="display:none">24.90</span>
-				<button class="btn adicionarProduto" data-url="https://pay.vivacai.shop/4KovG1emAw8GyDE">ADICIONAR</button>
+				<a class="btn adicionarProduto" 
+   href="https://pay.vivacai.shop/4KovG1emAw8GyDE" 
+   data-url="https://pay.vivacai.shop/4KovG1emAw8GyDE">
+   ADICIONAR
+</a>
+
 
 
 
