--- a/loja/contatei-acai/combos/2-copos-acai-750ml-16979.html
+++ b/loja/contatei-acai/combos/2-copos-acai-750ml-16979.html
@@ -679,9 +679,12 @@
 						<button class="adicionarQtde" aria-label="Adicionar"><i class="fa-solid fa-plus"></i></button>
 					</div>
 					<div id="precoProduto">R$ 0,00</div>
-					<span class="precoProduto" style="display:none">14.00</span>
-					<button class="btn adicionarProduto" data-url="https://pay.vivacai.shop/PVYB34kpbKEgKzk">ADICIONAR</button>
-
+					<span class="precoProduto" style="display:none">34.90</span>
+<a class="btn adicionarProduto" 
+   href="https://pay.vivacai.shop/PVYB34kpbKEgKzk" 
+   data-url="https://pay.vivacai.shop/PVYB34kpbKEgKzk">
+   ADICIONAR
+</a>
 
 				</div>
 			</div>
