--- a/index.html
+++ b/index.html
@@ -140,7 +140,21 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 			
 					obterLocalizacao();
 				</script>📍</div>
-			<div class="aberto"><i class="fa-solid fa-circle btn-pisca"></i> ABERTO AGORA!</div>			<div class="detalhe mostrarHorario"><i class="fa-solid fa-clock"></i> Horário de Funcionamento 🛒 <span><i class="fa-solid fa-angle-down"></i></span></div>
+			<div class="aberto">
+				<i class="btn-pisca" data-fa-i2svg="">
+				  <svg class="svg-inline--fa fa-circle" 
+					   aria-hidden="true" focusable="false" 
+					   data-prefix="fas" data-icon="circle" 
+					   role="img" xmlns="http://www.w3.org/2000/svg" 
+					   viewBox="0 0 512 512" 
+					   width="10" height="10" 
+					   data-fa-i2svg="">
+					<path fill="currentColor" d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"></path>
+				  </svg>
+				</i> 
+				ABERTO
+			  </div>
+						  <div class="detalhe mostrarHorario"><i class="fa-solid fa-clock"></i> Horário de Funcionamento 🛒 <span><i class="fa-solid fa-angle-down"></i></span></div>
 			<div class="horarios">
 				<div class="item destaque"><div><i class="fa-solid fa-clock"></i> Segunda-feira</div><div>10:00 às 23:59</div></div>
 <div class="item"><div>Terça-feira</div><div>10:00 às 23:59</div></div>
@@ -154,14 +168,15 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 	</div>
 	<div id="menuCategorias">
 		<div class="container">
-			<div class="categorias" style="">
-										<a href="#promo-apenas-retirada" title="Promo Apenas Retirada">
-							Promoção de Inauguração	💜				</a>
-														</a>
-							</div>
-			<a class="pesquisar" href="#pesquisar" title="Pesquisar"><i class="fa-solid fa-magnifying-glass"></i></a>
+			<div class="categorias">
+				<a href="#" title="Promoção de Inauguração" style="display: block; white-space: nowrap; overflow: hidden;">
+					Promoção de Inauguração 💜
+				</a>
+			</div>
 		</div>
 	</div>
+	
+	
 </header>
 <main id="lista">
 	<div class="container">
@@ -169,8 +184,46 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 			<input id="pesquisar" name="pesquisar" placeholder="O que você procura?" type="text">
 			<span></span>
 		</form>
-	
-		<h2>Pague 1 leve 2 <br> Somente para Clientes Novos</h2>
+		<div class="container">
+			<div class="alert alert-success">
+				<b>Frete Grátis</b> para <b><span id="locations"></span></b>
+				<script>
+					const estadosBrasils = {
+						"Acre": "AC", "Alagoas": "AL", "Amapá": "AP", "Amazonas": "AM",
+						"Bahia": "BA", "Ceará": "CE", "Distrito Federal": "DF", "Espírito Santo": "ES",
+						"Goiás": "GO", "Maranhão": "MA", "Mato Grosso": "MT", "Mato Grosso do Sul": "MS",
+						"Minas Gerais": "MG", "Pará": "PA", "Paraíba": "PB", "Paraná": "PR",
+						"Pernambuco": "PE", "Piauí": "PI", "Rio de Janeiro": "RJ", "Rio Grande do Norte": "RN",
+						"Rio Grande do Sul": "RS", "Rondônia": "RO", "Roraima": "RR", "Santa Catarina": "SC",
+						"São Paulo": "SP", "Sergipe": "SE", "Tocantins": "TO"
+					};
+		
+					async function obterLocalizacao() {
+						try {
+							const response = await fetch('https://get.geojs.io/v1/ip/geo.json');
+							const data = await response.json();
+							const cidade = data.city || "";
+							const estadoCompleto = data.region || "";
+							const estadoSigla = estadosBrasils[estadoCompleto] || "";
+		
+							if (cidade && estadoSigla) {
+								document.getElementById("locations").innerText = `${cidade} - ${estadoSigla}`;
+							} else {
+								throw new Error("Localização não encontrada");
+							}
+						} catch (error) {
+							console.error("Erro ao obter a localização:", error);
+							document.getElementById("locations").innerText = "O restaurante fica a 1.6 km de distância da sua casa.";
+						}
+					}
+		
+					obterLocalizacao();
+				</script>
+			</div>
+		</div>
+		
+		
+		<h2>Somente HOJE no 1° Pedido!</h2>
 		<div class="produtos">
 			<div class="item">
 				<a class="disponivel" href="loja/contatei-acai/combos/2-copos-acai-300ml-16979.html" data-idproduto="16979" data-categoriaproduto="combos" data-nomeproduto="2-copos-acai-300ml">
@@ -216,7 +269,7 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 						por apenas
 						<span class="precoPromocao">R$ 69,80</span>
 						<span class="preco">R$ 34,90</span>
-						<span class="estoque"><i class="fa-solid fa-circle-down"></i> últimas unidades</span>
+						<span class="estoque"><i class="fa-solid fa-circle-down"></i> 🔥 mais pedido</span>
 					</div>
 					<div class="fotoProduto">
 						<figure>
