--- a/loja/contatei-acai/combos/2-copos-acai-750ml-16979.html
+++ b/loja/contatei-acai/combos/2-copos-acai-750ml-16979.html
@@ -118,7 +118,7 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 			<div id="opacidade" class="fechar"></div>
 			<div>
 					<div class="container containerFinalizar">
-					<a class="voltar" href="../../contatei-acai.html" title="Voltar"><i class="fa-solid fa-chevron-left"></i> VOLTAR</a>
+					<a class="voltar" href="https://vivacai.shop/" title="Voltar"><i class="fa-solid fa-chevron-left"></i> VOLTAR</a>
 			<div id="detalhesProduto">
 				<div class="info1">
 					<div class="somarAoPreco" style="display:none">s</div>
