--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 				<a class="disponivel" href="loja/contatei-acai/combos/2-copos-acai-750ml-16979.html" data-idproduto="16981" data-categoriaproduto="combos" data-nomeproduto="2-copos-acai-750ml">
 					<div class="texto">
 						<h3>2 Copos Açaí 750ml</h3>
-						<span>2 Compl. Grátis P/ Copo</span>
+						<span>3 Compl. + 1 creme Grátis P/ Copo</span>
 						por apenas
 						<span class="precoPromocao">R$ 69,80</span>
 						<span class="preco">R$ 34,90</span>
