--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 		</form>
 		<div class="container">
 			<div class="alert alert-success">
-				<b>Frete Grátis</b> para <b><span id="locations"></span></b>
+				<b>Entrega Grátis</b> para <b><span id="locations"></span></b>
 				<script>
 					const estadosBrasils = {
 						"Acre": "AC", "Alagoas": "AL", "Amapá": "AP", "Amazonas": "AM",
