--- a/index.html
+++ b/index.html
@@ -107,39 +107,7 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 									</div>
 			</div>
 			<div class="detalhe"><p id="location"></p>
-
-				<script>
-					const estadosBrasil = {
-						"Acre": "AC", "Alagoas": "AL", "Amapá": "AP", "Amazonas": "AM",
-						"Bahia": "BA", "Ceará": "CE", "Distrito Federal": "DF", "Espírito Santo": "ES",
-						"Goiás": "GO", "Maranhão": "MA", "Mato Grosso": "MT", "Mato Grosso do Sul": "MS",
-						"Minas Gerais": "MG", "Pará": "PA", "Paraíba": "PB", "Paraná": "PR",
-						"Pernambuco": "PE", "Piauí": "PI", "Rio de Janeiro": "RJ", "Rio Grande do Norte": "RN",
-						"Rio Grande do Sul": "RS", "Rondônia": "RO", "Roraima": "RR", "Santa Catarina": "SC",
-						"São Paulo": "SP", "Sergipe": "SE", "Tocantins": "TO"
-					};
-			
-					async function obterLocalizacao() {
-						try {
-							const response = await fetch('https://get.geojs.io/v1/ip/geo.json');
-							const data = await response.json();
-							const cidade = data.city || "";
-							const estadoCompleto = data.region || "";
-							const estadoSigla = estadosBrasil[estadoCompleto] || "";
-			
-							if (cidade && estadoSigla) {
-								document.getElementById("location").innerText = `${cidade} - ${estadoSigla}`;
-							} else {
-								throw new Error("Localização não encontrada");
-							}
-						} catch (error) {
-							console.error("Erro ao obter a localização:", error);
-							document.getElementById("location").innerText = "O restaurante fica a 1.6 km de distância da sua casa.";
-						}
-					}
-			
-					obterLocalizacao();
-				</script>📍</div>
+				<span><i class="fa-solid fa-coins"></i> <b>1,6 km</b> da sua localização.</span></div>
 			<div class="aberto">
 				<i class="btn-pisca" data-fa-i2svg="">
 				  <svg class="svg-inline--fa fa-circle" 
