--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 									</div>
 			</div>
 			<div class="detalhe"><p id="location"></p>
-				<span><i class="fa-solid fa-coins"></i> <b>1,6 km</b> da sua localização.</span></div>
+				<span><i class="fa-solid fa-coins"></i> <b>1,6 km</b> da sua localização. 📍</span></div>
 			<div class="aberto">
 				<i class="btn-pisca" data-fa-i2svg="">
 				  <svg class="svg-inline--fa fa-circle" 
