--- a/index.html
+++ b/index.html
@@ -135,18 +135,6 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 		</div>
 	</div>
 	<div id="menuCategorias">
-		<div class="container">
-			<div class="categorias">
-				<a href="#" title="Promoção de Inauguração" style="display: block; white-space: nowrap; overflow: hidden;">
-					Promoção de Inauguração 💜
-				</a>
-			</div>
-		</div>
-	</div>
-	
-	
-</header>
-<main id="lista">
 	<div class="container">
 		<form class="form-busca">
 			<input id="pesquisar" name="pesquisar" placeholder="O que você procura?" type="text">
@@ -154,7 +142,7 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 		</form>
 		<div class="container">
 			<div class="alert alert-success">
-				<b>Entrega Grátis</b> para <b><span id="locations"></span></b>
+				<b>Entrega Grátis</b> para <b><span id="locations"> sua localização.</span></b>
 				<script>
 					const estadosBrasils = {
 						"Acre": "AC", "Alagoas": "AL", "Amapá": "AP", "Amazonas": "AM",
@@ -166,22 +154,31 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 						"São Paulo": "SP", "Sergipe": "SE", "Tocantins": "TO"
 					};
 		
-					async function obterLocalizacao() {
-						try {
-							const response = await fetch('https://get.geojs.io/v1/ip/geo.json');
-							const data = await response.json();
-							const cidade = data.city || "";
-							const estadoCompleto = data.region || "";
-							const estadoSigla = estadosBrasils[estadoCompleto] || "";
+					function obterLocalizacao() {
+						if (navigator.geolocation) {
+							navigator.geolocation.getCurrentPosition(async (position) => {
+								const latitude = position.coords.latitude;
+								const longitude = position.coords.longitude;
+								try {
+									const response = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}&accept-language=pt-BR`);
+									const data = await response.json();
+									const cidade = data.address.city || data.address.town || data.address.village || "";
+									const estadoCompleto = data.address.state || "";
+									const estadoSigla = estadosBrasils[estadoCompleto] || "";
 		
-							if (cidade && estadoSigla) {
-								document.getElementById("locations").innerText = `${cidade} - ${estadoSigla}`;
-							} else {
-								throw new Error("Localização não encontrada");
-							}
-						} catch (error) {
-							console.error("Erro ao obter a localização:", error);
-							document.getElementById("locations").innerText = "O restaurante fica a 1.6 km de distância da sua casa.";
+									if (cidade && estadoSigla) {
+										document.getElementById("locations").innerText = `${cidade} - ${estadoSigla}`;
+									} else {
+										throw new Error("Localização não encontrada");
+									}
+								} catch (error) {
+									document.getElementById("locations").innerText = "sua localização.";
+								}
+							}, () => {
+								document.getElementById("locations").innerText = "sua localização.";
+							});
+						} else {
+							document.getElementById("locations").innerText = "sua localização.";
 						}
 					}
 		
@@ -189,7 +186,6 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 				</script>
 			</div>
 		</div>
-		
 		
 		<h2>Somente HOJE no 1° Pedido!</h2>
 		<div class="produtos">
