--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 									</div>
 			</div>
 			<div class="detalhe"><p id="location"></p>
-				<span><i class="fa-solid fa-coins"></i> <b>1,6 km</b> da sua localização. 📍</span></div>
+				<span><i class="fa-solid fa-coins"></i> <b>1,6 km</b> da sua localização.</span></div>
 			<div class="aberto">
 				<i class="btn-pisca" data-fa-i2svg="">
 				  <svg class="svg-inline--fa fa-circle" 
@@ -135,6 +135,18 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 		</div>
 	</div>
 	<div id="menuCategorias">
+		<div class="container">
+			<div class="categorias">
+				<a href="#" title="Promoção de Inauguração" style="display: block; white-space: nowrap; overflow: hidden;">
+					Promoção de Inauguração 💜
+				</a>
+			</div>
+		</div>
+	</div>
+	
+	
+</header>
+<main id="lista">
 	<div class="container">
 		<form class="form-busca">
 			<input id="pesquisar" name="pesquisar" placeholder="O que você procura?" type="text">
@@ -186,6 +198,8 @@ src="https://www.facebook.com/tr?id=580746378135891&ev=PageView&noscript=1"
 				</script>
 			</div>
 		</div>
+		
+		
 		
 		<h2>Somente HOJE no 1° Pedido!</h2>
 		<div class="produtos">
