--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ src="https://www.facebook.com/tr?id=1956586664752276&ev=PageView&noscript=1"
 									</div>
 			</div>
 			<div class="detalhe"><p id="location"></p>
-				<span><i class="fa-solid fa-coins"></i> <b>1,6 km</b> da sua localização.</span></div>
+				<span><i class="fa-solid fa-coins"></i> <b>1,8 km</b> 📍</span></div>
 			<div class="aberto">
 				<i class="btn-pisca" data-fa-i2svg="">
 				  <svg class="svg-inline--fa fa-circle" 
@@ -169,51 +169,137 @@ src="https://www.facebook.com/tr?id=1956586664752276&ev=PageView&noscript=1"
 			<span></span>
 		</form>
 		<div class="container">
-			<div class="alert alert-success">
-				<b>Entrega Grátis</b> para <b><span id="locations"> sua localização.</span></b>
-				<script>
-					const estadosBrasils = {
-						"Acre": "AC", "Alagoas": "AL", "Amapá": "AP", "Amazonas": "AM",
-						"Bahia": "BA", "Ceará": "CE", "Distrito Federal": "DF", "Espírito Santo": "ES",
-						"Goiás": "GO", "Maranhão": "MA", "Mato Grosso": "MT", "Mato Grosso do Sul": "MS",
-						"Minas Gerais": "MG", "Pará": "PA", "Paraíba": "PB", "Paraná": "PR",
-						"Pernambuco": "PE", "Piauí": "PI", "Rio de Janeiro": "RJ", "Rio Grande do Norte": "RN",
-						"Rio Grande do Sul": "RS", "Rondônia": "RO", "Roraima": "RR", "Santa Catarina": "SC",
-						"São Paulo": "SP", "Sergipe": "SE", "Tocantins": "TO"
-					};
-		
-					function obterLocalizacao() {
-						if (navigator.geolocation) {
-							navigator.geolocation.getCurrentPosition(async (position) => {
-								const latitude = position.coords.latitude;
-								const longitude = position.coords.longitude;
-								try {
-									const response = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}&accept-language=pt-BR`);
-									const data = await response.json();
-									const cidade = data.address.city || data.address.town || data.address.village || "";
-									const estadoCompleto = data.address.state || "";
-									const estadoSigla = estadosBrasils[estadoCompleto] || "";
-		
-									if (cidade && estadoSigla) {
-										document.getElementById("locations").innerText = `${cidade} - ${estadoSigla}`;
-									} else {
-										throw new Error("Localização não encontrada");
-									}
-								} catch (error) {
-									document.getElementById("locations").innerText = "sua localização.";
-								}
-							}, () => {
-								document.getElementById("locations").innerText = "sua localização.";
-							});
-						} else {
-							document.getElementById("locations").innerText = "sua localização.";
-						}
-					}
-		
-					obterLocalizacao();
-				</script>
+			<div class="alert alert-success location-box">
+				<b><span id="locations" class="location-button">📍 Clique Aqui para Calcular a Taxa de Entrega.</span></b>
+				<div id="location-details" class="location-details" style="display: none;">
+					<span><i class="fa-solid fa-coins"></i> <b id="bairro-info"></b> </span>
+				</div>
 			</div>
+			
+			<script>
+				const estadosBrasils = {
+					"Acre": "AC", "Alagoas": "AL", "Amapá": "AP", "Amazonas": "AM",
+					"Bahia": "BA", "Ceará": "CE", "Distrito Federal": "DF", "Espírito Santo": "ES",
+					"Goiás": "GO", "Maranhão": "MA", "Mato Grosso": "MT", "Mato Grosso do Sul": "MS",
+					"Minas Gerais": "MG", "Pará": "PA", "Paraíba": "PB", "Paraná": "PR",
+					"Pernambuco": "PE", "Piauí": "PI", "Rio de Janeiro": "RJ", "Rio Grande do Norte": "RN",
+					"Rio Grande do Sul": "RS", "Rondônia": "RO", "Roraima": "RR", "Santa Catarina": "SC",
+					"São Paulo": "SP", "Sergipe": "SE", "Tocantins": "TO"
+				};
+		
+				function obterLocalizacao() {
+					const locationsElement = document.getElementById("locations");
+					const bairroInfoElement = document.getElementById("bairro-info");
+					const locationDetails = document.getElementById("location-details");
+		
+					locationsElement.innerHTML = "<b>Calculando rota... <span class='loader'></span></b>";
+					locationsElement.classList.add("loading");
+		
+					if (navigator.geolocation) {
+						navigator.geolocation.getCurrentPosition(async (position) => {
+							const latitude = position.coords.latitude;
+							const longitude = position.coords.longitude;
+							try {
+								const response = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}&accept-language=pt-BR`);
+								const data = await response.json();
+								const cidade = data.address.city || data.address.town || data.address.village || "";
+								const estadoCompleto = data.address.state || "";
+								const estadoSigla = estadosBrasils[estadoCompleto] || "";
+								const bairro = data.address.suburb || data.address.neighbourhood || "Bairro desconhecido";
+		
+								if (cidade && estadoSigla) {
+									locationsElement.innerHTML = `<b>Entrega Grátis</b> para <b>${cidade} - ${estadoSigla}</b>`;
+									bairroInfoElement.innerHTML = `📍 Nossa loja fica no bairro <b>${bairro}.</b>`;
+									locationDetails.style.display = "block";
+									locationsElement.classList.remove("loading");
+								} else {
+									throw new Error("Localização não encontrada");
+								}
+							} catch (error) {
+								locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
+								locationsElement.classList.remove("loading");
+							}
+						}, () => {
+							locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
+							locationsElement.classList.remove("loading");
+						});
+					} else {
+						locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
+						locationsElement.classList.remove("loading");
+					}
+				}
+		
+				document.getElementById("locations").addEventListener("click", obterLocalizacao);
+			</script>
+		
+			<style>
+				.location-box {
+					padding: 15px;
+					border-radius: 10px;
+					text-align: center;
+					color: green;
+					font-weight: bold;
+					background-color: #f8fff4;
+					box-shadow: 0 4px 6px rgba(0, 128, 0, 0.2);
+				}
+		
+				.location-button {
+					cursor: pointer;
+					text-decoration: none;
+					color: green;
+					display: inline-block;
+					padding: 12px 20px;
+					border: none;
+					border-radius: 8px;
+					font-size: 18px;
+					transition: all 0.3s ease;
+					background-color: #ffffff;
+					box-shadow: 0px 4px 6px rgba(0, 128, 0, 0.3);
+				}
+		
+				.location-button:hover {
+					color: white;
+					background-color: green;
+					box-shadow: 0px 6px 10px rgba(0, 128, 0, 0.4);
+				}
+		
+				.location-details {
+					margin-top: 10px;
+					font-size: 16px;
+					color: #333;
+				}
+		
+				.loading {
+					color: #fff !important;
+					background: linear-gradient(45deg, #28a745, #218838);
+					padding: 12px;
+					border-radius: 8px;
+					animation: pulsar 1s infinite alternate;
+				}
+		
+				.loader {
+					display: inline-block;
+					width: 14px;
+					height: 14px;
+					border: 3px solid white;
+					border-top: 3px solid transparent;
+					border-radius: 50%;
+					animation: spin 0.8s linear infinite;
+					margin-left: 8px;
+				}
+		
+				@keyframes pulsar {
+					0% { opacity: 1; transform: scale(1); }
+					100% { opacity: 0.6; transform: scale(1.1); }
+				}
+		
+				@keyframes spin {
+					0% { transform: rotate(0deg); }
+					100% { transform: rotate(360deg); }
+				}
+			</style>
 		</div>
+		
 		
 		
 		
