--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!-- Mirrored from contatei.com.br/loja/contatei-acai by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 09:54:13 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 	<meta name="google" content="notranslate" />
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -100,7 +101,6 @@ src="https://www.facebook.com/tr?id=1956586664752276&ev=PageView&noscript=1"
 <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="3213ba12f333174422205207-|49"></script><body onload="carrinho()" data-urlloja="contatei-acai" data-lojaaberta="s" data-idusuario="48" data-pixel="" data-arredondar="n" data-calculoconf="n" oncontextmenu="if (!window.__cfRLUnblockHandlers) return false; return false" data-cf-modified-3213ba12f333174422205207-="">
 			<div id="opacidade" class="fechar"></div>
 			<div>
-								<a class="btn login" href="contatei-acai/minhaconta.html" title="Minha Conta"><i class="fa-solid fa-user"></i></a>
 				<header id="topo">
 	<div class="cover main" style="background-image: url(img/bancodecapas/acaiterias/acaiteria-1.jpg)">
 		<div class="logo">
@@ -119,11 +119,12 @@ src="https://www.facebook.com/tr?id=1956586664752276&ev=PageView&noscript=1"
 			<div class="detalhe">
 									<span><i class="fa-solid fa-coins"></i> Pedido  Máximo: <b>1 por CPF</b></span>
 								<div>
-																<span><i class="fa-solid fa-motorcycle"></i> <b>20-35</b> min 🛵</span>
+																<span><i class="fa-solid fa-motorcycle"></i> <b>20-35</b> min</span>
 									</div>
 			</div>
 			<div class="detalhe"><p id="location"></p>
-				<span><i class="fa-solid fa-coins"></i> <b>1,8 km</b> 📍</span></div>
+				<span><i class="fa-solid fa-location-dot"></i> 1,8 km
+				</span></div>
 			<div class="aberto">
 				<i class="btn-pisca" data-fa-i2svg="">
 				  <svg class="svg-inline--fa fa-circle" 
@@ -138,7 +139,7 @@ src="https://www.facebook.com/tr?id=1956586664752276&ev=PageView&noscript=1"
 				</i> 
 				ABERTO
 			  </div>
-						  <div class="detalhe mostrarHorario"><i class="fa-solid fa-clock"></i> Horário de Funcionamento 🛒 <span><i class="fa-solid fa-angle-down"></i></span></div>
+						  <div class="detalhe mostrarHorario"><i class="fa-solid fa-clock"></i> Horário de Funcionamento <span><i class="fa-solid fa-angle-down"></i></span></div>
 			<div class="horarios">
 				<div class="item destaque"><div><i class="fa-solid fa-clock"></i> Segunda-feira</div><div>10:00 às 23:59</div></div>
 <div class="item"><div>Terça-feira</div><div>10:00 às 23:59</div></div>
@@ -170,9 +171,9 @@ src="https://www.facebook.com/tr?id=1956586664752276&ev=PageView&noscript=1"
 		</form>
 		<div class="container">
 			<div class="alert alert-success location-box">
-				<b><span id="locations" class="location-button">📍 Clique Aqui para Calcular a Taxa de Entrega.</span></b>
+				<b><span id="locations" class="location-button"><i class="fa-solid fa-location-dot" style="color: red; font-size: 18px;"></i> Calcular a Taxa de Entrega.</span></b>
 				<div id="location-details" class="location-details" style="display: none;">
-					<span><i class="fa-solid fa-coins"></i> <b id="bairro-info"></b> </span>
+					<span> <b id="bairro-info"></b> </span>
 				</div>
 			</div>
 			
@@ -349,7 +350,10 @@ src="https://www.facebook.com/tr?id=1956586664752276&ev=PageView&noscript=1"
 						por apenas
 						<span class="precoPromocao">R$ 69,80</span>
 						<span class="preco">R$ 34,90</span>
-						<span class="estoque"><i class="fa-solid fa-circle-down"></i> 🔥 mais pedido</span>
+						<span class="estoque"><i class="fa-solid fa-fire" style="color: orange;"></i>
+
+
+							o mais pedido</span>
 					</div>
 					<div class="fotoProduto">
 						<figure>
