--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ src="https://www.facebook.com/tr?id=1956586664752276&ev=PageView&noscript=1"
 		</form>
 		<div class="container">
 			<div class="alert alert-success location-box">
-				<b><span id="locations" class="location-button"><i class="fa-solid fa-location-dot" style="color: red; font-size: 18px;"></i> Calcular a Taxa de Entrega.</span></b>
+				<b><span id="locations" class="location-button"><i class="fa-solid fa-location-dot" style="color: red; font-size: 18px;"></i> CALCULAR ENTREGA</span></b>
 				<div id="location-details" class="location-details" style="display: none;">
 					<span> <b id="bairro-info"></b> </span>
 				</div>
