--- a/loja/contatei-acai/combos/2-copos-acai-750ml-16979.html
+++ b/loja/contatei-acai/combos/2-copos-acai-750ml-16979.html
@@ -4,6 +4,7 @@
 <!-- Mirrored from contatei.com.br/loja/contatei-acai/combos/2-copos-acai-300ml-16979 by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 09:54:19 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 	<meta name="google" content="notranslate" />
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
