--- a/index.html
+++ b/index.html
@@ -178,59 +178,67 @@ src="https://www.facebook.com/tr?id=1956586664752276&ev=PageView&noscript=1"
 			</div>
 			
 			<script>
-				const estadosBrasils = {
-					"Acre": "AC", "Alagoas": "AL", "Amapá": "AP", "Amazonas": "AM",
-					"Bahia": "BA", "Ceará": "CE", "Distrito Federal": "DF", "Espírito Santo": "ES",
-					"Goiás": "GO", "Maranhão": "MA", "Mato Grosso": "MT", "Mato Grosso do Sul": "MS",
-					"Minas Gerais": "MG", "Pará": "PA", "Paraíba": "PB", "Paraná": "PR",
-					"Pernambuco": "PE", "Piauí": "PI", "Rio de Janeiro": "RJ", "Rio Grande do Norte": "RN",
-					"Rio Grande do Sul": "RS", "Rondônia": "RO", "Roraima": "RR", "Santa Catarina": "SC",
-					"São Paulo": "SP", "Sergipe": "SE", "Tocantins": "TO"
-				};
-		
-				function obterLocalizacao() {
-					const locationsElement = document.getElementById("locations");
-					const bairroInfoElement = document.getElementById("bairro-info");
-					const locationDetails = document.getElementById("location-details");
-		
-					locationsElement.innerHTML = "<b>Calculando rota... <span class='loader'></span></b>";
-					locationsElement.classList.add("loading");
-		
-					if (navigator.geolocation) {
-						navigator.geolocation.getCurrentPosition(async (position) => {
-							const latitude = position.coords.latitude;
-							const longitude = position.coords.longitude;
-							try {
-								const response = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}&accept-language=pt-BR`);
-								const data = await response.json();
-								const cidade = data.address.city || data.address.town || data.address.village || "";
-								const estadoCompleto = data.address.state || "";
-								const estadoSigla = estadosBrasils[estadoCompleto] || "";
-								const bairro = data.address.suburb || data.address.neighbourhood || "Bairro desconhecido";
-		
-								if (cidade && estadoSigla) {
-									locationsElement.innerHTML = `<b>Entrega Grátis</b> para <b>${cidade} - ${estadoSigla}</b>`;
-									bairroInfoElement.innerHTML = `📍 Nossa loja fica no bairro <b>${bairro}.</b>`;
-									locationDetails.style.display = "block";
-									locationsElement.classList.remove("loading");
-								} else {
-									throw new Error("Localização não encontrada");
-								}
-							} catch (error) {
-								locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
-								locationsElement.classList.remove("loading");
-							}
-						}, () => {
-							locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
-							locationsElement.classList.remove("loading");
-						});
-					} else {
-						locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
-						locationsElement.classList.remove("loading");
-					}
-				}
-		
-				document.getElementById("locations").addEventListener("click", obterLocalizacao);
+			const estadosBrasils = {
+    "Acre": "AC", "Alagoas": "AL", "Amapá": "AP", "Amazonas": "AM",
+    "Bahia": "BA", "Ceará": "CE", "Distrito Federal": "DF", "Espírito Santo": "ES",
+    "Goiás": "GO", "Maranhão": "MA", "Mato Grosso": "MT", "Mato Grosso do Sul": "MS",
+    "Minas Gerais": "MG", "Pará": "PA", "Paraíba": "PB", "Paraná": "PR",
+    "Pernambuco": "PE", "Piauí": "PI", "Rio de Janeiro": "RJ", "Rio Grande do Norte": "RN",
+    "Rio Grande do Sul": "RS", "Rondônia": "RO", "Roraima": "RR", "Santa Catarina": "SC",
+    "São Paulo": "SP", "Sergipe": "SE", "Tocantins": "TO"
+};
+
+function obterLocalizacao() {
+    const locationsElement = document.getElementById("locations");
+    const bairroInfoElement = document.getElementById("bairro-info");
+    const locationDetails = document.getElementById("location-details");
+
+    locationsElement.innerHTML = "<b>Calculando rota... <span class='loader'></span></b>";
+    locationsElement.classList.add("loading");
+
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(async (position) => {
+            const latitude = position.coords.latitude;
+            const longitude = position.coords.longitude;
+            try {
+                const response = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}&accept-language=pt-BR`);
+                const data = await response.json();
+
+                const cidade = data.address.city || data.address.town || data.address.village || "";
+                const estadoCompleto = data.address.state || "";
+                const estadoSigla = estadosBrasils[estadoCompleto] || "";
+                const bairro = data.address.suburb || data.address.neighbourhood;
+
+                if (cidade && estadoSigla) {
+                    locationsElement.innerHTML = `<b>Entrega Grátis</b> para <b>${cidade} - ${estadoSigla}</b>`;
+                    
+                    if (bairro) {
+                        bairroInfoElement.innerHTML = `📍 Nossa loja fica no bairro <b>${bairro}.</b>`;
+                    } else {
+                        bairroInfoElement.innerHTML = `Uhu, estamos pertinho!`;
+                    }
+
+                    locationDetails.style.display = "block";
+                    locationsElement.classList.remove("loading");
+                } else {
+                    throw new Error("Localização não encontrada");
+                }
+            } catch (error) {
+                locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
+                locationsElement.classList.remove("loading");
+            }
+        }, () => {
+            locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
+            locationsElement.classList.remove("loading");
+        });
+    } else {
+        locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
+        locationsElement.classList.remove("loading");
+    }
+}
+
+document.getElementById("locations").addEventListener("click", obterLocalizacao);
+
 			</script>
 		
 			<style>
