--- a/index.html
+++ b/index.html
@@ -937,6 +937,38 @@ document.getElementById("locations").addEventListener("click", obterLocalizacao)
 		</div>
 	</div>
 </main>
+				<!-- Botão dentro do conteúdo da página -->
+<button id="btnTopo" class="btnTopo">Voltar ao Topo</button>
+
+<style>
+  /* Estilo do botão */
+  .btnTopo {
+    display: block;
+    margin: 20px auto; /* Centraliza horizontalmente */
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: #5b0e5c; /* Cor do botão */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .btnTopo:hover {
+    background-color: #7d1380; /* Cor ao passar o mouse */
+  }
+</style>
+
+<script>
+  // Evento de clique para voltar ao topo suavemente
+  document.getElementById("btnTopo").addEventListener("click", function() {
+    window.scrollTo({
+      top: 0,
+      behavior: "smooth"
+    });
+  });
+</script>
+
 <div id="produto"></div>
 <div id="info">
 	<a class="fechar" href="#fechar"><i class="far fa-times-circle fa-2x"></i></a>
