--- a/index.html
+++ b/index.html
@@ -937,6 +937,73 @@ document.getElementById("locations").addEventListener("click", obterLocalizacao)
 		</div>
 	</div>
 </main>
+<!-- Modal para expandir a imagem -->
+<div id="modalImagem" class="modal">
+    <span class="fechar">&times;</span>
+    <img class="modal-conteudo" id="imagemExpandida">
+</div>
+
+<style>
+    /* Estilizando o modal */
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        justify-content: center;
+        align-items: center;
+    }
+
+    .modal-conteudo {
+        max-width: 90%;
+        max-height: 90%;
+        border-radius: 10px;
+    }
+
+    .fechar {
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        font-size: 40px;
+        color: white;
+        cursor: pointer;
+    }
+</style>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        var imagens = document.querySelectorAll(".fotoProduto img");
+        var modal = document.getElementById("modalImagem");
+        var modalImg = document.getElementById("imagemExpandida");
+        var fechar = document.querySelector(".fechar");
+
+        // Adiciona evento de clique para cada imagem dentro de .fotoProduto
+        imagens.forEach(function(imagem) {
+            imagem.addEventListener("click", function() {
+                modal.style.display = "flex"; // Exibe o modal
+                modalImg.src = this.src; // Define a imagem no modal
+            });
+        });
+
+        // Fechar modal ao clicar no "X"
+        fechar.addEventListener("click", function() {
+            modal.style.display = "none";
+        });
+
+        // Fechar modal ao clicar fora da imagem
+        modal.addEventListener("click", function(event) {
+            if (event.target === modal) {
+                modal.style.display = "none";
+            }
+        });
+    });
+</script>
+
+				
 				<!-- Botão dentro do conteúdo da página -->
 <button id="btnTopo" class="btnTopo">Voltar ao Topo</button>
 
