--- a/loja/contatei-acai/combos/2-copos-acai-300ml-16979.html
+++ b/loja/contatei-acai/combos/2-copos-acai-300ml-16979.html
@@ -3,7 +3,17 @@
 
 <!-- Mirrored from contatei.com.br/loja/contatei-acai/combos/2-copos-acai-300ml-16979 by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 09:54:19 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<head>
+<head>	<!-- Hotjar Tracking Code for Site 5299017 (nome ausente) -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:5299017,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 	<meta name="google" content="notranslate" />
 	<meta charset="utf-8">
