--- a/index.html
+++ b/index.html
@@ -45,21 +45,7 @@
   data-utmify-prevent-subids
   async
   defer
-></script>
-	<!-- Hotjar Tracking Code for Site 5299017 (nome ausente) -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:5299017,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-	
-	
-	<!-- Meta Pixel Code -->
+></script><!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -238,15 +224,15 @@ function obterLocalizacao() {
                     throw new Error("Localização não encontrada");
                 }
             } catch (error) {
-                locationsElement.innerText = "Ative a localização do seu aparelho para calcularmos a rota de entrega! Atualize a página para tentar novamente.";
+                locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
                 locationsElement.classList.remove("loading");
             }
         }, () => {
-            locationsElement.innerText = "Ative a localização do seu aparelho para calcularmos a rota de entrega! Atualize a página para tentar novamente."";
+            locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
             locationsElement.classList.remove("loading");
         });
     } else {
-        locationsElement.innerText = "Ative a localização do seu aparelho para calcularmos a rota de entrega! Atualize a página para tentar novamente."";
+        locationsElement.innerText = "Não foi possível obter sua localização. Ative o GPS do seu aparelho para calcularmos a rota de entrega!";
         locationsElement.classList.remove("loading");
     }
 }
