--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ document.getElementById("locations").addEventListener("click", obterLocalizacao)
 	<div class="container">
 		<H2>Instagram: @AnAÇAI.delivery</H2>
 		<div class="alert">
-			<b style="font-size: 16px;">4,8</b><br>
+			<b style="font-size: 16px;">4,9</b><br>
 			<i class="fa fa-star" aria-hidden="true" style="color: goldenrod;"></i>
 			<i class="fa fa-star" aria-hidden="true" style="color: goldenrod;"></i>
 			<i class="fa fa-star" aria-hidden="true" style="color: goldenrod;"></i>
@@ -394,7 +394,7 @@ document.getElementById("locations").addEventListener("click", obterLocalizacao)
 			<div class="produtos">
 				<div class="item">
 					<a class="disponivel" href="#" onclick="return false;">
-						<div class="texto">
+						<div class="texto" style="center">
 							<h3>Adriel</h3>
 							<span><b>5,0</b></span>
 						</div>
